--- a/index.css
+++ b/index.css
@@ -2,12 +2,26 @@ body{
     text-align: center;
 }
 
-#headimg{
-    width: 1100px;
-    height: 400px;
-}
-
 .display-2{
     font-family: 'Bitter', serif;
     margin-left: -200px;
+}
+
+#error, #any{
+    color: red;
+    margin-left: 150px;
+}
+
+.fillbox{
+    border-radius: 10px;
+    background: rgb(19, 19, 18);
+    width: 500px;
+}
+
+input{
+    width: 150px;
+}
+
+#card1{
+    color: rgb(239, 239, 245);
 }
